# multiline_paster_mainlogic

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  copydll.ps1  logic_config.toml
src/: config.rs  default.rs  entry.rs  lib.rs
